@@ -50,7 +50,9 @@
             "CPAN::Meta" : "2.120900"
          },
          "requires" : {
+            "Crypt::OpenSSL::DSA" : "0",
             "Crypt::OpenSSL::RSA" : "0",
+            "Digest::SHA" : "0",
             "ExtUtils::MakeMaker" : "0",
             "File::Spec" : "0",
             "Module::Signature" : "0",
