@@ -4,7 +4,9 @@ author:
   - 'Gideon Knocke <gknocke@cpan.org>'
   - 'Timothe Litt <tlhackque@cpan.org>'
 build_requires:
+  Crypt::OpenSSL::DSA: 0
   Crypt::OpenSSL::RSA: 0
+  Digest::SHA: 0
   ExtUtils::MakeMaker: 0
   File::Spec: 0
   Module::Signature: 0
