@@ -28,7 +28,9 @@ my %WriteMakefileArgs = (
     "warnings" => 0
   },
   "TEST_REQUIRES" => {
+    "Crypt::OpenSSL::DSA" => 0,
     "Crypt::OpenSSL::RSA" => 0,
+    "Digest::SHA" => 0,
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "Module::Signature" => 0,
@@ -45,7 +47,9 @@ my %WriteMakefileArgs = (
 my %FallbackPrereqs = (
   "Carp" => 0,
   "Convert::ASN1" => "0.27",
+  "Crypt::OpenSSL::DSA" => 0,
   "Crypt::OpenSSL::RSA" => 0,
+  "Digest::SHA" => 0,
   "Encode" => 0,
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
