@@ -314,7 +314,10 @@ METHODS
 
     The CSR's signature is returned.
 
-    If $format is true, in binary.
+    If $format is 1, in binary.
+
+    If $format is 2, decoded as an ECDSA signature - returns hashref to r
+    and s.
 
     Otherwise, in its hexadecimal representation.
 
@@ -649,6 +652,8 @@ CHANGES
        - Add certificationRequest and signature(1) to enable verification of CSR signatures
     
        - Add signatureParams()
+    
+       - Add signature(2) to extract ECDSA signature components.
     
       
 
